--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
     "knex": "^0.19.1",
+    "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "swagger-tools": "0.10.1"
   }
