--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "private": true,
   "dependencies": {
     "connect": "^3.2.0",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "js-yaml": "^3.3.0",
     "knex": "^0.19.1",
     "morgan": "^1.9.1",
